--- a/ur_calibration/package.xml
+++ b/ur_calibration/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
   <depend>ur_client_library</depend>
   <depend>ur_robot_driver</depend>
 
