--- a/ur_controllers/package.xml
+++ b/ur_controllers/package.xml
@@ -31,6 +31,8 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>angles</depend>
+  <depend>lifecycle_msgs</depend>
   <!-- TODO: rosdep cannot find ur_client_library -->
   <depend>ur_client_library</depend>
   <depend>ur_dashboard_msgs</depend>
