--- a/ur_robot_driver/package.xml
+++ b/ur_robot_driver/package.xml
@@ -14,11 +14,9 @@
   <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>
   <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
   <maintainer email="denis.stogl@picknik.ai">Denis Stogl</maintainer>
-
-
   <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
 
-  <license>BSD-3-Clause</license>
+  <license>Apache License 2.0</license>
 
   <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
   <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>
@@ -42,8 +40,6 @@
   <depend>ur_description</depend>
   <depend>ur_bringup</depend>
   <depend>ur_controllers</depend>
-  <depend>std_msgs</depend>
-  <depend>controller_manager_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
